Use the environment variables and system properties